namespaces/live-1.cloud-platform.service.justice.gov.uk/prepare-a-case-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prepare-a-case-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "Prepare a case"
    cloud-platform.justice.gov.uk/owner: "Probation Micro-services: Created namespace for Prepare a case (dev)"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/prepare-a-case.git"
